Update bug_report.yml to include assignees
Add assignee to bug report issue template

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -2,6 +2,8 @@ name: Bug Report
 description: File a bug report
 labels: ["bug", "triage"]
 title: "[Bug]: "
+assignees:
+  - Shtoyan
 body:
   - type: markdown
     attributes:
